# fastapi-poetry-be

01-hello-world/: README.md  pyproject.toml
01-hello-world/app/: main.py  schemas.py
01-hello-world/app/schema/: food.py  recipe.py
